ajout du compteur avec js

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             <span>0 ms</span>
         </div>
         <div class="controls">
-            <button id="comm">Commencer</button>
-            <button id="pause">Pause</button>
-            <button id="rep">Reprendre</button>
+            <button id="comm" onclick="commencer()">Commencer</button>
+            <button id="pause" onclick="pause()">Pause</button>
+            <button id="rep" onclick="reprendre()">Reprendre</button>
         </div>
     </div>
     </div>
+    <script src="chrono.js"></script>
 </body>
 </html>
